--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <!-- name -->
               <h5 class="art-name mb-10">hanifmohd</h5>
               <!-- post -->
-              <div class="art-sm-text">Senior Assistant Administrative N36 <br>Neoteric Education Initiatives Centre, UPSI </div>
+              <div class="art-sm-text">Administrative Officer N9 <br>Office Of Deputy Vice Chancellor (Research & Innovation), UPSI </div>
             </div>
             <!-- info bar header end -->
 
@@ -93,7 +93,7 @@
                   </li>
                   <!-- age -->
                   <li>
-                    <h6>Age:</h6><span>38</span>
+                    <h6>Age:</h6><span>42</span>
                   </li>
                 </ul>
               </div>
@@ -322,7 +322,7 @@
                         <!-- main title -->
                         <div class="art-banner-title">
                           <!-- title -->
-                          <h1 class="mb-15">Discover my Amazing <br>Art Space!</h1>
+                          <h1 class="mb-15">Excellence Through Experience <br>and Expertise!</h1>
                           <!-- suptitle -->
                           <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; I <span class="txt-rotate" data-period="2000"
                               data-rotate='[ "am an autodidact.", "am a graphic designer.", "am a video editor.", "can make mockup design.", "make logo design.", "can build website using google site.", "can build dashboard for data analysis." ]'></span>&lt;/<i>code</i>&gt;</div>
@@ -2017,7 +2017,7 @@
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
-        <h4>www.hanifmohd.com</h4>
+        <h4>www.hanifmohd.net</h4>
         <!-- progressbar -->
         <div id="preloader" class="art-preloader-load"></div>
       </div>
